# Infera

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mooncake.rdma.research.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md
.github/scripts/: build_test_push.sh  dispatch_build.sh
.github/workflows/: ci.yml  dco.yml  release.yml
bench/pd_mori_1p1d/: README.md  bench.sh  down.sh  launch_engine.sh  launch_etcd.sh  launch_server.sh  up.sh
bench/serve_standard/: README.md  bench_vllm_serve.sh
deploy/: README.md
deploy/docker/: Dockerfile.atom  Dockerfile.kvd  Dockerfile.server  Dockerfile.sglang  Dockerfile.sglang.gfx942  Dockerfile.vllm
deploy/manifests/: gaie-inferadeployment.yaml
deploy/operator/: .gitignore  Dockerfile  Makefile  README.md  go.mod
deploy/scripts/: README.md  deploy-k8s.sh  gaie-smoke.sh
examples/deepseek_v4/: README.md  common.sh
examples/k8s-deployments/: README.md  kgateway-gaie-aggregated.yaml  multinode-tp-aggregated.yaml  pd-disaggregated.yaml  pvc-models.yaml  single-node-aggregated.yaml
examples/kimi_agentic_bench/: README.md  env.sh  plot_results.py  run_sweep.sh
examples/sglang_1p2d_kimi2.6/: README.md  bench_inferencex.sh  curl.sh  infera_0_etcd.sh  infera_1_server.sh  infera_2_sglang_prefill.sh  infera_3_sglang_decode.sh  preflight_rdma.sh  sglang_naive_engine.sh
infera/api/: __init__.py  anthropic.py
infera/common/: arch.py  disagg_preflight.py  discovery.py  discovery_k8s.py  k8s_client.py  logsafe.py  nats_request.py  net.py  registration.py  registration_k8s.py  tokenizer.py  worker_pool.py
infera/engine/: base.py  dsv4_gfx942.py  rocm_rdma_env.py
infera/gaie/: __main__.py  args.py  endpoint_picker.py  ext_proc_server.py
infera/kv/: __init__.py  api.py  compat_key.py  families.py  hashing.py  index.py  nats_bus.py  nats_relay.py  probe.py  publisher.py  snapshot.py  subscriber.py  types.py  wire.py  writer.py
infera/kvd/: __init__.py  __main__.py  client.py  fd_passing.py  lmcache_long_region.py  long_region_proto.py  mooncake_long_region.py  server.py  shared_arena.py  ssd.py  statctl.py  storage_classify.py  storage_selfcheck.py  store.py  striped_long_region.py  tablespace.py  tablespace_multipool.py  wire.py
infera/router/: auto.py  base.py  cache_control.py  direct.py  disagg.py  dp_routing.py  engine_priority.py  mixed.py
infera/server/: __main__.py  app.py  args.py  launch_rust.py  metrics.py  profiling.py
manual/: .readthedocs.yaml  Makefile  README.md  conf.py  index.md
manual/components/: engines.md  kvd.md  operator.md  server.md
manual/examples/: sglang_1p1d_dsv4.md  sglang_1p2d_kimi2.6.md  sglang_mix_dsv4.md
manual/features/: compatibility_matrix.md  feature_matrix.md  kv_aware_routing.md  kv_cache_offload.md  pd_disaggregation.md  routing_and_transport.md
manual/getting_started/: installation.md  overview.md  quickstart.md
manual/reference/: benchmarking.md  cli.md  environment.md  glossary.md  troubleshooting.md
manual/serving/: deployment.md  kubernetes.md
manual/sphinx/: _toc.yml.in  requirements.in  requirements.txt
manual/wip/: mi325-deepseek-v4.md
rdma.gpubuf.dmabuf.2x-disproof.packup_20260723/: README.md  REPRODUCE.md  environment.md  notes.md
rdma.gpubuf.dmabuf.2x-disproof.packup_20260723/original_probe_from_colleague/: README.md  ionic_vram_test.py  run.sh
rdma.gpubuf.dmabuf.2x-disproof.packup_20260723/results/: three_meter_evidence.md
rdma.gpubuf.dmabuf.2x-disproof.packup_20260723/scripts/: dmabuf_debug.py  hold_probe.py  kern_dmabuf.sh  reg_variants.py  run_debug.sh  run_hold2.sh  run_hold_big.sh  run_probe2.sh  whatis2x.py
rust/: .gitignore  Cargo.toml  README.md
rust/router/: Cargo.toml
rust/router/src/: block_hasher.rs  cache_control.rs  config.rs  disagg.rs  discovery.rs  dp.rs  handlers.rs  hasher.rs  kv_event.rs  lib.rs  main.rs  policy.rs  pool.rs  protocol.rs  proxy.rs  tiktoken.rs  util.rs
rust/router/tests/: functional.rs  kv_event_zmq.rs
scripts/: check-author-email.sh
sglang.pd.mooncake.packup_20260723/: README.md  REPRODUCE.md  environment.md  environment_nodes.txt  notes.md
sglang.pd.mooncake.packup_20260723/patches/: fix_commit_2198bae.txt
sglang.pd.mooncake.packup_20260723/results/: smoke_and_evidence.md
sglang.pd.mooncake.packup_20260723/scripts/: mori_smoke.sh  pd_env.sh  pd_poll.sh  pd_poll_mori.sh  pd_smoke.sh  pd_teardown.sh  run_mooncake.sh  run_mori.sh
tests/: conftest.py  run_tests.sh
tests/e2e/: __init__.py  (+1 more)
(+344 files in other folders)
